mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo-deploy
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - env:
            - name: MONGODB_INITDB_ROOT_PASSWORD
              value: password
            - name: MONGODB_INITDB_ROOT_USERNAME
              value: username
          image: mongo
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
          # volumeMounts:
          #   - mountPath: /data/db
          #     name: mongodb-data
      # restartPolicy: Always
      # volumes:
      #   - name: mongodb-data
      #     persistentVolumeClaim:
      #       claimName: mongodb-data
status: {}
