web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: public.ecr.aws/d3h2f0h9/web:latest
          name: web
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
