api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
    - port: 3001
      targetPort: 3001
  type: LoadBalancer
  selector:
    app: api
status:
  loadBalancer: {}
