mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo-db
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
status:
  loadBalancer: {}
