web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
  selector:
    app: web
status:
  loadBalancer: {}
