ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api
            port:
              number: 3001
